--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "~1.5.0",
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0"
+    "html5-boilerplate": "^5.3.0",
+    "angular-bootstrap-lightbox": "^0.12.0"
   },
   "authors": [
     "Joseph Cauble <jdc0066@auburn.edu> and Jake Laney <jpl0015@auburn.edu>"
